<resources>
    <string name="app_name">To Do</string>
    <string name="add_task">Add Task</string>
    <string name="all_tasks">All Tasks</string>
    <string name="active_tasks">Active Tasks</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="enter_task">Enter task</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="delete_task">Delete task</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string-array name="languages">
        <item>English</item>
        <item>हिंदी</item>
        <item>संस्कृत</item>
    </string-array>
    <string name="priority_low">Low Priority</string>
    <string name="priority_medium">Medium Priority</string>
    <string name="priority_high">High Priority</string>
    <string name="sort_by_priority">Sort by Priority</string>
    <string name="due_date">Due Date</string>
    <string name="set_reminder">Set Reminder</string>
</resources>